Fix tooltip and word wrap in tiles

--- a/styles.css
+++ b/styles.css
@@ -34,3 +34,7 @@ body {
   font-size: 14px;
   width: 100%;
 }
+
+#movie {
+  font-weight: 700;
+}
